Fix winner card z-index on homepage hero

--- a/client/src/pages/HomePage.module.scss
+++ b/client/src/pages/HomePage.module.scss
@@ -120,6 +120,7 @@
   top: 0;
   right: 4%;
   width: 210px;
+  z-index: 2;
 }
 
 .cardWrapScores {
